# valala

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  geometry.py  release.sh
.cargo/: config
ci/: release.sh
client/: Cargo.toml  settings.ron
client/res/: resources.ron
client/res/models/: character.mtl
client/res/shaders/: character.vert  line.vert  map.vert  path.vert
client/src/: character.rs  context.rs  hex.rs  lobby.rs  main.rs  map.rs
client/src/data/: map.rs
client/src/stage/: lobby.rs  (+2 more)
engine/: Cargo.toml
engine/res/shaders/: color.frag  color.vert  default.vert  model.frag  model.vert  picking.vert
engine/src/: camera.rs  clock.rs  color.rs  context.rs  engine.rs  entity.rs  gamestate.rs  geometry.rs  lib.rs  log.rs  math.rs  mesh.rs  model.rs  picking.rs  prelude.rs  resource.rs  scene.rs  settings.rs  shader.rs  stage.rs  store.rs  texture.rs  ui.rs  view.rs
engine/src/scene/: cache.rs  camera.rs  entity.rs  mod.rs  node.rs  scene.rs
engine/src/shaders/: default.frag  default.vert
res/meshes/: character.mtl
res/shaders/: character.frag  grid.frag  line.frag  path.frag  picking.frag  terrain.frag  terrain.vert
server/: Cargo.toml
server/src/: main.rs
src/: camera.rs  character.rs  engine.rs  entity.rs  game.rs  gamestate.rs  grid.rs  hex.rs  identifier.rs  lobby.rs  main.rs  map.rs  mesh.rs  picking.rs  resource.rs  scene.rs  settings.rs  state.rs  ui.rs  vertex.rs  world.rs
src/shader/: character.vert  grid.frag  grid.vert  path.frag  path.vert  picking.vert  terrain.frag  terrain.vert
tools/: README.md  rotation.py
(+12 files in other folders)
